fix cache issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "private, no-cache, no-store, must-revalidate" },
+        { "key": "CDN-Cache-Control", "value": "no-store" },
+        { "key": "Vercel-CDN-Cache-Control", "value": "no-store" }
+      ]
+    }
+  ],
   "rewrites": [
     { "source": "/api/menu", "destination": "/api/menu" },
     { "source": "/api/upload", "destination": "/api/upload" },
